# creation

./: .gitignore  Dockerfile.backend  README.md  design.md  docker-compose.yml  pyproject.toml
.devcontainer/: .zshrc  Dockerfile  devcontainer.json  docker-compose.yml  requirements.txt
app/: main.py
app/backend/: main.py
app/backend/services/: __init__.py  analysis_service.py  base_service.py  decomposition_service.py  evaluation_service.py  execution_service.py  reasoning_service.py  service_manager.py  summary_service.py
app/backend/tools/: boss_search.py  generator_tool.py  liepin_search.py  linkedin_search.py
app/backend/utils/: config.py  models.py
app/frontend/: package-lock.json  package.json
app/frontend/public/: index.html  manifest.json
app/frontend/src/: App.tsx
app/frontend/src/components/: FlowChart.tsx
frontend/: package-lock.json  package.json
frontend/public/: index.html
frontend/src/: App.tsx  index.tsx
tests/: test_boss_search.py
